--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:title="@string/new_travel_deal" android:id="@+id/item_new_travel_deal" app:showAsAction="never"/>
+    <item android:title="@string/log_out" android:id="@+id/item_log_out" app:showAsAction="never"/>
 </menu>
