--- a/app/src/main/res/layout/item_deal.xml
+++ b/app/src/main/res/layout/item_deal.xml
@@ -8,7 +8,7 @@
     <ImageView
             android:layout_width="130dp"
             android:layout_height="130dp" tools:srcCompat="@tools:sample/backgrounds/scenic"
-            android:id="@+id/imageView"
+            android:id="@+id/iv_deal"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -17,15 +17,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/tv_title"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/iv_deal"
             android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/iv_deal"
             android:layout_marginTop="16dp" android:textSize="24sp"/>
     <TextView
             android:text="Some random description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_description" app:layout_constraintStart_toEndOf="@+id/imageView"
+            android:id="@+id/tv_description" app:layout_constraintStart_toEndOf="@+id/iv_deal"
             android:layout_marginStart="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
